# ExLoader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
LICENSES/: CLI11.txt
cmake/toolchains/: mingw32-toolchain.cmake
compat/: win_time_shim.cpp
docs/: _config.yml  getting-started.md  index.md  troubleshooting.md
docs/hooks/: crypto.md  filesystem.md  math.md  network.md  string.md
examples/test_target/: CMakeLists.txt  README.md  build.bat  crypto_operations.cpp  crypto_operations.hpp  gui_crackme.cpp  gui_login.cpp  gui_login.hpp  http_operations.cpp  http_operations.hpp  http_server.cpp  http_server.hpp  main.cpp  modern_ui.cpp  modern_ui.hpp  network_operations.cpp  network_operations.hpp  run_with_exloader.bat
include/exloader/cli/: cli_options.hpp  parser.hpp
include/exloader/config/: config_loader.hpp  config_types.hpp
include/exloader/injector/: process_launcher.hpp
include/exloader/ipc/: named_pipe.hpp
include/exloader/logging/: json_logger.hpp
injector/include/exloader/injector/: injector_app.hpp
injector/src/: cli_parser.cpp  config_loader.cpp  injector_app.cpp  main.cpp  process_launcher.cpp
ipc/src/: named_pipe.cpp
logging/src/: json_logger.cpp
profiles/: sample_profile.json  schema.json
profiles/templates/: attach-survey.json  crypto-only.json  default.json  farmex-full-capture.json  game-reverse.json  malware-analysis.json  network-only.json  proxy-audit.json  server-observability.json
runtime/include/exloader/runtime/: bootstrap.hpp  runtime_api.hpp
runtime/include/exloader/runtime/hooks/: event_utils.hpp  plugin_api.hpp  plugin_manager.hpp
runtime/include/exloader/runtime/hooks/crypto/: key_store.hpp
runtime/include/exloader/runtime/hooks/modules/: bcrypt_hook.hpp  cryptoapi_hook.hpp  dummy_plugin.hpp  filemon_hook.hpp  mathmon_hook.hpp  stringmon_hook.hpp  winhttp_hook.hpp  wininet_hook.hpp  winsock_hook.hpp
runtime/include/exloader/runtime/hooks/modules/http_sys_hook/: http_sys_hook.hpp
runtime/include/exloader/runtime/hooks/modules/libcurl_hook/: libcurl_hook.hpp
runtime/include/exloader/runtime/hooks/modules/proxy_hook/: proxy_hook.hpp
runtime/include/exloader/runtime/hooks/modules/schannel_hook/: schannel_hook.hpp
runtime/include/exloader/runtime/hooks/modules/urlmon_hook/: urlmon_hook.hpp
runtime/include/exloader/runtime/hooks/modules/win32web_hook/: win32web_hook.hpp
runtime/include/exloader/runtime/hooks/modules/winhttp_extended/: winhttp_extended_hook.hpp
runtime/src/: dllmain.cpp  runtime.cpp  runtime_entry.cpp
runtime/src/hooks/: event_utils.cpp  plugin_manager.cpp
runtime/src/hooks/crypto/: key_store.cpp
runtime/src/hooks/modules/: bcrypt_hook.cpp  cryptoapi_hook.cpp  dummy_plugin.cpp  filemon_hook.cpp  mathmon_hook.cpp  stringmon_hook.cpp  winhttp_hook.cpp  wininet_hook.cpp  winsock_hook.cpp
runtime/src/hooks/modules/http_sys_hook/: http_sys_hook.cpp
runtime/src/hooks/modules/libcurl_hook/: libcurl_hook.cpp
runtime/src/hooks/modules/proxy_hook/: proxy_hook.cpp
runtime/src/hooks/modules/schannel_hook/: schannel_hook.cpp
runtime/src/hooks/modules/urlmon_hook/: urlmon_hook.cpp
runtime/src/hooks/modules/win32web_hook/: win32web_hook.cpp
runtime/src/hooks/modules/winhttp_extended/: winhttp_extended_hook.cpp
scripts/: build_all.bat  test_32bit.bat
tests/runtime/: runtime_smoke.cpp
tools/: key_extractor.py  log_analyzer.py
